cmake_minimum_required(VERSION 3.21)
project(CPrimerPlus6E_homework C)

set(CMAKE_C_STANDARD 90)

# Chapter02 homeworks.
add_executable(ch02hw01 ch02/hw01.c)
add_executable(ch02hw02 ch02/hw02.c)
add_executable(ch02hw03 ch02/hw03.c)
add_executable(ch02hw04 ch02/hw04.c)
add_executable(ch02hw05 ch02/hw05.c)
add_executable(ch02hw06 ch02/hw06.c)
add_executable(ch02hw07 ch02/hw07.c)
add_executable(ch02hw08 ch02/hw08.c)
