cmake_minimum_required(VERSION 3.21)
project(CPrimerPlus6E_homework C)

set(CMAKE_C_STANDARD 99)

# Chapter02 homeworks.
set(chapter ch02)
add_executable(${chapter}hw01 ${chapter}/hw01.c)
add_executable(${chapter}hw02 ${chapter}/hw02.c)
add_executable(${chapter}hw03 ${chapter}/hw03.c)
add_executable(${chapter}hw04 ${chapter}/hw04.c)
add_executable(${chapter}hw05 ${chapter}/hw05.c)
add_executable(${chapter}hw06 ${chapter}/hw06.c)
add_executable(${chapter}hw07 ${chapter}/hw07.c)
add_executable(${chapter}hw08 ${chapter}/hw08.c)

# Chapter03 homeworks.
set(chapter ch03)
add_executable(${chapter}hw01 ${chapter}/hw01.c)
add_executable(${chapter}hw02 ${chapter}/hw02.c)
add_executable(${chapter}hw03 ${chapter}/hw03.c)
add_executable(${chapter}hw04 ${chapter}/hw04.c)
add_executable(${chapter}hw05 ${chapter}/hw05.c)
add_executable(${chapter}hw06 ${chapter}/hw06.c)
add_executable(${chapter}hw07 ${chapter}/hw07.c)
add_executable(${chapter}hw08 ${chapter}/hw08.c)

# Chapter04 homeworks.
set(chapter ch04)
add_executable(${chapter}hw01 ${chapter}/hw01.c)
add_executable(${chapter}hw02 ${chapter}/hw02.c)
add_executable(${chapter}hw03 ${chapter}/hw03.c)
add_executable(${chapter}hw04 ${chapter}/hw04.c)
add_executable(${chapter}hw05 ${chapter}/hw05.c)
add_executable(${chapter}hw06 ${chapter}/hw06.c)
add_executable(${chapter}hw07 ${chapter}/hw07.c)
add_executable(${chapter}hw08 ${chapter}/hw08.c)

# Chapter05 homeworks.
set(chapter ch05)
add_executable(${chapter}hw01 ${chapter}/hw01.c)
add_executable(${chapter}hw02 ${chapter}/hw02.c)
add_executable(${chapter}hw03 ${chapter}/hw03.c)
add_executable(${chapter}hw04 ${chapter}/hw04.c)
add_executable(${chapter}hw05 ${chapter}/hw05.c)
add_executable(${chapter}hw06 ${chapter}/hw06.c)
add_executable(${chapter}hw07 ${chapter}/hw07.c)
add_executable(${chapter}hw08 ${chapter}/hw08.c)
add_executable(${chapter}hw09 ${chapter}/hw09.c)

# Chapter06 homeworks.
set(chapter ch06)
add_executable(${chapter}hw01 ${chapter}/hw01.c)
add_executable(${chapter}hw02 ${chapter}/hw02.c)
add_executable(${chapter}hw03 ${chapter}/hw03.c)
add_executable(${chapter}hw04 ${chapter}/hw04.c)
add_executable(${chapter}hw05 ${chapter}/hw05.c)
add_executable(${chapter}hw06 ${chapter}/hw06.c)
add_executable(${chapter}hw07 ${chapter}/hw07.c)
